--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 /* From Uiverse.io by ammarsaa - Modified for centering */
 /* Add styles for the body to make the background black */
 body {
-  background-color: #000000;
+  background-color: #181c24;
   margin: 0;
   padding: 0;
   display: flex;
