Style: Change background color to #121b22

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 /* Novo estilo baseado na imagem de referência */
 body {
-  background-color: #0f3a3e; /* Cor de fundo solicitada */
+  background-color: #121b22; /* Cor de fundo atualizada */
   margin: 0;
   padding: 0;
   display: flex;
